--- a/week2/index.html
+++ b/week2/index.html
@@ -15,7 +15,8 @@
         }
         #result-div{
             height : 100%;
-        }
+            width : 18%;      
+   }
         #code{
             position : absolute;
             top : 0;
@@ -23,16 +24,12 @@
             width : 70%;
             margin-left: 20%;
             margin-right: 10%;            
-/*
-            background-color: white;
-            color : black;
-*/
         }
         #caption {
             position: absolute;
-            right : 4px;
+            right : 6px;
             top : 8px;
-            font-size: 12px;
+            font-size: 10px;
         }
     </style>
 </head>
